# trysms

./: .gitignore  1-conftest.py  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
apps/buyers/: __init__.py  admin.py  apps.py  models.py  signals.py
apps/buyers/migrations/: 0001_initial.py  0002_rename_buyers_buyer.py
apps/cars/: apps.py  models.py  signals.py
apps/cars/migrations/: 0001_initial.py
apps/codes/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py
apps/codes/migrations/: 0001_initial.py  0002_codes_user.py  0003_rename_codes_code.py
apps/contacts/: models.py
apps/contacts/migrations/: 0001_initial.py
apps/orders/: __init__.py  admin.py  apps.py  models.py  signals.py
apps/orders/migrations/: 0001_initial.py  0002_auto_20210811_2223.py
apps/products/: models.py
apps/products/migrations/: 0001_initial.py  0002_rename_descount_price_product_discount_price.py
apps/sales/: admin.py  apps.py  models.py  signals.py
apps/sales/migrations/: 0001_initial.py  0002_rename_sales_sale.py  0003_rename_order_sale_order.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py  utils.py  views.py
templates/: auth.html  base.html  home.html  verify.html
test/: test_ex1.py  test_ex2.py  test_ex4.py
tests/: factories.py  test_ex3.py  test_ex4.py  test_ex5.py  test_ex6.py  test_ex7.py
